[package]
name = "p2p_poc"
version = "0.1.0"
authors = ["Well Shang <wellshang@163.com>"]

[dependencies]
bincode = "1.0.0"
bytes = "0.4"
futures = "0.1.20"
lazy_static = "1.0.1"
mio = "0.6.14"
serde = "1.0.34"
serde_derive = "1.0.34"
time = "0.1"
tokio = "0.1.0"
tokio-codec = "0.1.0"
tokio-current-thread = "0.1.0"
tokio-executor = "0.1.2"
tokio-io = "0.1.6"
tokio-reactor = "0.1.1"
tokio-tcp = "0.1.0"
tokio-threadpool = "0.1.4"


[dev-dependencies]
env_logger = { version = "0.4", default-features = false }
flate2 = { version = "1", features = ["tokio"] }
futures-cpupool = "0.1"
http = "0.1"
httparse = "1.0"
libc = "0.2"
num_cpus = "1.0"
serde_json = "1.0"



