[package]
name = "p2p_poc"
version = "0.1.0"
authors = ["Well Shang <wellshang@163.com>"]

[dependencies]
bincode = "1.0.1"
byteorder = "1.2.3"
bytes = "0.4"
dotenv = "0.13.0"
futures = "0.1.20"
java-properties = "1.1.1"
lazy_static = "1.0.1"
log = "0.4.2"
log4rs = "0.8.0"
mio = "0.6.14"
serde = "1.0.34"
serde_derive = "1.0.34"
state = "0.4.1"
time = "0.1"
tokio = "0.1.0"
tokio-codec = "0.1.0"
tokio-current-thread = "0.1.0"
tokio-executor = "0.1.2"
tokio-io = "0.1.6"
tokio-reactor = "0.1.1"
tokio-tcp = "0.1.0"
tokio-threadpool = "0.1.4"




